# medusa_simulation

./: .gitignore  .gitmodules  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  README.md  index.html  install_requirements.sh  mkdocs.yml  sitemap.xml
MBlack/: index.html
MRed/: index.html
MVector/: index.html
MYellow/: index.html
Waypoint/: index.html
acoustic-vehicle-state-broadcaster/: index.html
addons/path_stabilization_guidance/: CMakeLists.txt  package.xml
addons/path_stabilization_guidance/config/: params.yaml  ros.yaml
addons/path_stabilization_guidance/launch/: start_guidance_actor.launch
addons/path_stabilization_guidance/src/: GuidanceSystem.py
auv-simulation/: index.html
bluerov-regular/: index.html
bringup-system/: index.html
comms-ros-messages/: index.html
console-path-parser/: index.html
cooperative-path-following/: index.html
cpf-gamma/: index.html
data-serializer/: index.html
docs/: ignore_packages_doxygen.txt  index.md
dsor-paths/: index.html
dsor-ros-messages/: index.html
dsor-utility-functions/: index.html
evo-tools/: index.html
http-server/: index.html
interrogation-scheme/: index.html
medusa-diagnostics-library/: index.html
medusa-gazebo-bringup/: index.html
medusa-ros-messages/: index.html
simple_bringup/: CMakeLists.txt  mkdocs.yml  package.xml
simple_bringup/config/dev_configs/: ros.yaml
simple_bringup/config/real/mvector/: acoustic_data.yaml  common.yaml  comms.yaml  control.yaml  cooperative.yaml  nav.yaml  process.yaml  sim.yaml
simple_bringup/launch/: start_vehicle.launch
(+487 files in other folders)
