<?xml version="1.0"?>
<package format="2">
  <name>simple_bringup</name>
  <version>1.0.0</version>
  <description>The simple_bringup package</description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
